fix: z-index dropdown

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1358,6 +1358,7 @@ html {
 
 .top-bar {
   position: relative;
+  z-index: 1;
   padding: 30px 0;
 }
 @media (max-width: 991.98px) {
@@ -1784,11 +1785,19 @@ html {
   overflow: hidden;
 }
 .slideshow__item {
+  position: relative;
   flex-shrink: 0;
   width: 100%;
+  padding-top: 34%;
 }
 .slideshow__img {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  object-fit: cover;
 }
 .slideshow__page {
   position: absolute;
