--- a/scss/components/slideshow.scss
+++ b/scss/components/slideshow.scss
@@ -7,12 +7,20 @@
   }
 
   &__item {
+    position: relative;
     flex-shrink: 0;
     width: 100%;
+    padding-top: 34%;
   }
 
   &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    object-fit: cover;
   }
 
   &__page {
