--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -16,6 +16,7 @@
 .top-bar {
   @extend %flexItemCenter;
   position: relative;
+  z-index: 1;
   padding: 30px 0;
 
   @include abstracts.breakpoint(lg) {
